// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Story Snapshots: Content should match snapshot 1`] = `
[
  <View
    collapsable={false}
  >
    <View
      pointerEvents="box-none"
      style={
        [
          {
            "flexDirection": "row",
            "left": 0,
            "position": "absolute",
            "right": 0,
          },
          {
            "height": 68,
          },
          {
            "backgroundColor": "#EC0D2A",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "flex-end",
              "justifyContent": "center",
              "position": "absolute",
              "top": 0,
            },
            {
              "width": 350,
            },
            {
              "height": 68,
            },
            {
              "left": undefined,
              "right": 0,
              "transform": [
                {
                  "translateX": 80,
                },
              ],
            },
          ]
        }
      >
        <View
          accessibilityLabel="Delete"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          testID="servers-history-https://open.rocket.chat-delete"
        />
      </View>
    </View>
    <View
      style={
        {
          "transform": [
            {
              "translateX": 0,
            },
          ],
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="servers-history-https://open.rocket.chat"
      />
    </View>
  </View>,
  <View
    collapsable={false}
  >
    <View
      pointerEvents="box-none"
      style={
        [
          {
            "flexDirection": "row",
            "left": 0,
            "position": "absolute",
            "right": 0,
          },
          {
            "height": 68,
          },
          {
            "backgroundColor": "#EC0D2A",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "flex-end",
              "justifyContent": "center",
              "position": "absolute",
              "top": 0,
            },
            {
              "width": 350,
            },
            {
              "height": 68,
            },
            {
              "left": undefined,
              "right": 0,
              "transform": [
                {
                  "translateX": 80,
                },
              ],
            },
          ]
        }
      >
        <View
          accessibilityLabel="Delete"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          testID="servers-history-https://superlongservername.tologintoasuperlongservername.rocket.chat-delete"
        />
      </View>
    </View>
    <View
      style={
        {
          "transform": [
            {
              "translateX": 0,
            },
          ],
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="servers-history-https://superlongservername.tologintoasuperlongservername.rocket.chat"
      />
    </View>
  </View>,
  <View
    collapsable={false}
  >
    <View
      pointerEvents="box-none"
      style={
        [
          {
            "flexDirection": "row",
            "left": 0,
            "position": "absolute",
            "right": 0,
          },
          {
            "height": 68,
          },
          {
            "backgroundColor": "#EC0D2A",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "flex-end",
              "justifyContent": "center",
              "position": "absolute",
              "top": 0,
            },
            {
              "width": 350,
            },
            {
              "height": 68,
            },
            {
              "left": undefined,
              "right": 0,
              "transform": [
                {
                  "translateX": 80,
                },
              ],
            },
          ]
        }
      >
        <View
          accessibilityLabel="Delete"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          testID="servers-history-https://stable.rocket.chat-delete"
        />
      </View>
    </View>
    <View
      style={
        {
          "transform": [
            {
              "translateX": 0,
            },
          ],
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="servers-history-https://stable.rocket.chat"
      />
    </View>
  </View>,
]
`;

exports[`Story Snapshots: SwipeActions should match snapshot 1`] = `
[
  <View
    collapsable={false}
  >
    <View
      pointerEvents="box-none"
      style={
        [
          {
            "flexDirection": "row",
            "left": 0,
            "position": "absolute",
            "right": 0,
          },
          {
            "height": 68,
          },
          {
            "backgroundColor": "#EC0D2A",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "flex-end",
              "justifyContent": "center",
              "position": "absolute",
              "top": 0,
            },
            {
              "width": 350,
            },
            {
              "height": 68,
            },
            {
              "left": undefined,
              "right": 0,
              "transform": [
                {
                  "translateX": 80,
                },
              ],
            },
          ]
        }
      >
        <View
          accessibilityLabel="Delete"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          testID="servers-history-https://open.rocket.chat-delete"
        />
      </View>
    </View>
    <View
      style={
        {
          "transform": [
            {
              "translateX": 0,
            },
          ],
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="servers-history-https://open.rocket.chat"
      />
    </View>
  </View>,
  <View
    collapsable={false}
  >
    <View
      pointerEvents="box-none"
      style={
        [
          {
            "flexDirection": "row",
            "left": 0,
            "position": "absolute",
            "right": 0,
          },
          {
            "height": 68,
          },
          {
            "backgroundColor": "#EC0D2A",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "flex-end",
              "justifyContent": "center",
              "position": "absolute",
              "top": 0,
            },
            {
              "width": 350,
            },
            {
              "height": 68,
            },
            {
              "left": undefined,
              "right": 0,
              "transform": [
                {
                  "translateX": 80,
                },
              ],
            },
          ]
        }
      >
        <View
          accessibilityLabel="Delete"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          testID="servers-history-https://example.com-delete"
        />
      </View>
    </View>
    <View
      style={
        {
          "transform": [
            {
              "translateX": 0,
            },
          ],
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="servers-history-https://example.com"
      />
    </View>
  </View>,
]
`;

exports[`Story Snapshots: Themes should match snapshot 1`] = `
[
  <View
    collapsable={false}
  >
    <View
      pointerEvents="box-none"
      style={
        [
          {
            "flexDirection": "row",
            "left": 0,
            "position": "absolute",
            "right": 0,
          },
          {
            "height": 68,
          },
          {
            "backgroundColor": "#EC0D2A",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "flex-end",
              "justifyContent": "center",
              "position": "absolute",
              "top": 0,
            },
            {
              "width": 350,
            },
            {
              "height": 68,
            },
            {
              "left": undefined,
              "right": 0,
              "transform": [
                {
                  "translateX": 80,
                },
              ],
            },
          ]
        }
      >
        <View
          accessibilityLabel="Delete"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          testID="servers-history-https://open.rocket.chat-delete"
        />
      </View>
    </View>
    <View
      style={
        {
          "transform": [
            {
              "translateX": 0,
            },
          ],
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="servers-history-https://open.rocket.chat"
      />
    </View>
  </View>,
  <View
    collapsable={false}
  >
    <View
      pointerEvents="box-none"
      style={
        [
          {
            "flexDirection": "row",
            "left": 0,
            "position": "absolute",
            "right": 0,
          },
          {
            "height": 68,
          },
          {
            "backgroundColor": "#BB3E4E",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "flex-end",
              "justifyContent": "center",
              "position": "absolute",
              "top": 0,
            },
            {
              "width": 350,
            },
            {
              "height": 68,
            },
            {
              "left": undefined,
              "right": 0,
              "transform": [
                {
                  "translateX": 80,
                },
              ],
            },
          ]
        }
      >
        <View
          accessibilityLabel="Delete"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          testID="servers-history-https://open.rocket.chat-delete"
        />
      </View>
    </View>
    <View
      style={
        {
          "transform": [
            {
              "translateX": 0,
            },
          ],
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="servers-history-https://open.rocket.chat"
      />
    </View>
  </View>,
  <View
    collapsable={false}
  >
    <View
      pointerEvents="box-none"
      style={
        [
          {
            "flexDirection": "row",
            "left": 0,
            "position": "absolute",
            "right": 0,
          },
          {
            "height": 68,
          },
          {
            "backgroundColor": "#BB3E4E",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "flex-end",
              "justifyContent": "center",
              "position": "absolute",
              "top": 0,
            },
            {
              "width": 350,
            },
            {
              "height": 68,
            },
            {
              "left": undefined,
              "right": 0,
              "transform": [
                {
                  "translateX": 80,
                },
              ],
            },
          ]
        }
      >
        <View
          accessibilityLabel="Delete"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          testID="servers-history-https://open.rocket.chat-delete"
        />
      </View>
    </View>
    <View
      style={
        {
          "transform": [
            {
              "translateX": 0,
            },
          ],
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="servers-history-https://open.rocket.chat"
      />
    </View>
  </View>,
]
`;
